--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 			It is a 9 month coding course for web full stack development.
           </p>
           <ul class="actions stacked">
-            <li><a href="https://github.com/wesley-ruedebusch?tab=repositories" class="button">Learn More</a></li>
+            <li><a href="https://github.com/wesley-ruedebusch?tab=repositories" class="button">Project Links</a></li>
           </ul>
         </div>
         <div class="image">
@@ -92,7 +92,7 @@
 			I have built myself or collabrated with others to make.
           </p>
           <ul class="actions stacked">
-            <li><a href="#" class="button">Project Link</a></li>
+            <li><a href="https://github.com/wesley-ruedebusch?tab=repositories" class="button">Project Link</a></li>
           </ul>
         </div>
         <div class="image">
