project link broke this should fix

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
           <h2>Projects</h2>
           <p>
 			This is a section where you can find out more about my work and view some past projects that
-			I have built myself or collabrated with others to make.
+			I have built myself or collabrated with others to make. All work has been credited.
           </p>
           <ul class="actions stacked">
             <li><a href="https://github.com/wesley-ruedebusch?tab=repositories" class="button">Project Link</a></li>
